made user names links in reservations

--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -199,7 +199,7 @@
                   <ol class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #1<span class="badge bg-success">Approved</span></div>
+                        <div><a href="#">User #1</a><span class="badge bg-success">Approved</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -216,7 +216,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #2<span class="badge bg-warning">Pending</span></div>
+                        <div><a href="#">User #2</a><span class="badge bg-warning">Pending</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -233,7 +233,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #3<span class="badge bg-danger">Declined</span></div>
+                        <div><a href="#">User #3</a><span class="badge bg-danger">Declined</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -250,7 +250,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #4<span class="badge bg-secondary">Expired</span></div>
+                        <div><a href="#">User #4</a><span class="badge bg-secondary">Expired</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -267,7 +267,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #5<span class="badge bg-dark">Terminated</span></div>
+                        <div><a href="#">User #5</a><span class="badge bg-dark">Terminated</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -284,7 +284,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #6<span class="badge bg-success">Completed</span></div>
+                        <div><a href="#">User #6</a><span class="badge bg-success">Completed</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
@@ -301,7 +301,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div>User #7<span class="badge bg-secondary">Cancelled</span></div>
+                        <div><a href="#">User #7</a><span class="badge bg-secondary">Cancelled</span></div>
                         <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
                       </div>
                       <div class="btn-group">
