--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -284,8 +284,8 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                       <div class="request-card-info">
-                        <div><a href="#">User #6</a><span class="badge bg-success">Completed</span></div>
-                        <p>Details: 12-04-2022 to 12-05-2022, 5 guests</p>
+                        <div><a href="fake-user.html">Bob Ross</a><span class="badge bg-success">Completed</span></div>
+                        <p>Details: 12-04-2019 to 12-10-2019, 5 guests</p>
                       </div>
                       <div class="btn-group">
                         <button type="button" class="btn btn-outline-secondary">Contact</button>
