--- a/P1/index.html
+++ b/P1/index.html
@@ -56,66 +56,84 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
               </div>
               <div class="modal-body">
-                <h3>
+                <h3 class="border-bottom mb-3 ms-3 me-3">
                   Price
                 </h3>
                 <form>
-                  <div class="form-check">
+                  <div class="form-check ms-3 me-3">
                     <input class="form-check-input" type="radio" name="price" id="price-low-to-high">
                     <label class="form-check-label" for="price-low-to-high">
                       Low to high
                     </label>
                   </div>
-                  <div class="form-check">
+                  <div class="form-check ms-3 me-3">
                     <input class="form-check-input" type="radio" name="price" id="price-high-to-low">
                     <label class="form-check-label" for="price-high-to-low">
                       High to low
                     </label>
                   </div>
                 </form>
-                <h3>
+                <h3 class="border-bottom m-3">
                   Rating
                 </h3>
                 <form>
-                  <div class="form-check">
+                  <div class="form-check ms-3 me-3">
                     <input class="form-check-input" type="radio" name="rating" id="rating-low-to-high">
                     <label class="form-check-label" for="rating-low-to-high">
                       Low to high
                     </label>
                   </div>
-                  <div class="form-check">
+                  <div class="form-check ms-3 me-3">
                     <input class="form-check-input" type="radio" name="rating" id="rating-high-to-low">
                     <label class="form-check-label" for="rating-high-to-low">
                       High to low
                     </label>
                   </div>
                 </form>
-                <h3>
+                <h3 class="border-bottom m-3">
                   Amenities
                 </h3>
-                <form class="d-flex flex-wrap justify-content-between">
+                <form class="d-flex flex-wrap justify-content-between ms-3 me-3">
                   <div class="form-check w-50">
-                    <input class="form-check-input" type="checkbox" value="" id="wifi">
+                    <input class="form-check-input amenities-check" type="checkbox" value="" id="wifi">
                     <label class="form-check-label" for="wifi">
                       Wifi
                     </label>
                   </div>
                   <div class="form-check w-50">
-                    <input class="form-check-input" type="checkbox" value="" id="pool">
+                    <input class="form-check-input amenities-check" type="checkbox" value="" id="pool">
                     <label class="form-check-label" for="pool">
                       Pool
                     </label>
                   </div>
                   <div class="form-check w-50">
-                    <input class="form-check-input" type="checkbox" value="" id="gym">
+                    <input class="form-check-input amenities-check" type="checkbox" value="" id="gym">
                     <label class="form-check-label" for="gym">
                       Gym
                     </label>
                   </div>
                   <div class="form-check w-50">
-                    <input class="form-check-input" type="checkbox" value="" id="hot-tub">
+                    <input class="form-check-input amenities-check" type="checkbox" value="" id="hot-tub">
                     <label class="form-check-label" for="hot-tub">
                       Hot tub
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="hot-tub">
+                    <label class="form-check-label" for="hot-tub">
+                      Washer
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="hot-tub">
+                    <label class="form-check-label" for="hot-tub">
+                      Dryer
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="hot-tub">
+                    <label class="form-check-label" for="hot-tub">
+                      Fireplace
                     </label>
                   </div>
                 </form>
