--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -32,7 +32,7 @@
                   <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                 </a>
               <ul class="dropdown-menu dropdown-menu-end me-1">
-                <li><a class="dropdown-item" href="">Reservations</a></li>
+                <li><a class="dropdown-item" href="no-reservations.html">Reservations</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="profile.html">My Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
