--- a/P1/reservations.html
+++ b/P1/reservations.html
@@ -47,19 +47,16 @@
         <h1 class="m-5">
             Reservations
         </h1>
-        <div class="no-reservations border container m-5">
-            <div class="row">
-                <div class="col margin-auto">
-                    <h3 class="mb-4">No reservations yet!</h3>
-                    <a class="btn btn-primary p-2" href="logged-in.html">
-                        Start searching
-                    </a>
-                </div>
-                <div class="col-9 p-0">
-                    <img src="images/trip.jpg" id="no-reservation-img" alt="car going on road trip">
-                </div>
+        <div class="card m-5">
+            <img class="card-img-top" src="images/Edwards-House.jpg" alt="Edward's house">
+            <div class="card-body">
+                <h5 class="card-title">Forks, Washington, US</h5>
+                <p class="card-text">4347 km away</p>
+                <p class="card-text">Feb. 10-18</p>
+                <p class="card-text font-weight-bold">Hosted by Edward</p>
+                <a href="reservation-details.html" class="btn btn-primary mt-1">View reservation</a>
             </div>
-        </div>
+          </div>
       </main>
   </body>
 </html>
