made amenities consistent

--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -94,9 +94,23 @@
                         <input type="text" class="form-control short-input" id="guests">
                       </div>
                     </div>
-                    <div class="form-group">
-                      <label for="amenities">Amenities</label>
-                      <textarea type="text" class="form-control" id="amenities" placeholder="What's nearby?"></textarea>
+                    <div class="row form-small-grid mb-2">
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="wifi" value="4">
+                        <label for="wifi">Wifi</label>
+                      </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="pool" value="2">
+                        <label for="pool">Pool</label>
+                      </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="gym" value="0">
+                        <label for="gym">Gym</label>
+                      </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="hottub" value="6">
+                        <label for="hottub">Hottub</label>
+                      </div>
                     </div>
                     <button type="submit" class="btn btn-success submit-btn">Create</button>
                   </form>
