--- a/P1/property.html
+++ b/P1/property.html
@@ -136,10 +136,28 @@
                     </div>
                   </div>
                 </div>
-                <div class="row mt-3">
+                <div class="row mt-3 ">
                   <h4 class="mb-3">
                     Amenities
                   </h4>
+                  <div class="d-flex flex-wrap justify-content-between align-items-center">
+                    <div class="property-amenity d-flex align-items-center">
+                      <i class="fa-solid fa-wifi"></i>
+                      <h5 class="ms-2 mb-0 thin-font">WIFI</h5>
+                    </div>
+                    <div class="property-amenity d-flex align-items-center">
+                      <i class="fa-solid fa-utensils"></i>
+                      <h5 class="ms-2 mb-0 thin-font">Kitchen</h5>
+                    </div>
+                    <div class="property-amenity d-flex  align-items-center">
+                      <i class="fa-solid fa-water-ladder"></i>
+                      <h5 class="ms-2 mb-0 thin-font">Hot tub</h5>
+                    </div>
+                    <div class="property-amenity d-flex align-items-center">
+                      <i class="fa-solid fa-fire"></i>
+                      <h5 class="ms-2 mb-0 thin-font">Fire pit</h5>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
