--- a/P1/property.html
+++ b/P1/property.html
@@ -206,7 +206,7 @@
                 <p class="text-center">$5700</p>
               </div>
               
-              <a class="btn btn-primary mt-3">
+              <a href="log-in-to-reserve.html" class="btn btn-primary mt-3">
                 Reserve
               </a>
             </div>
