--- a/P1/property.html
+++ b/P1/property.html
@@ -136,11 +136,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="row mt-3 ">
+                <div class="row mt-3 border-bottom">
                   <h4 class="mb-3">
                     Amenities
                   </h4>
-                  <div class="d-flex flex-wrap justify-content-between align-items-center">
+                  <div class="d-flex flex-wrap justify-content-between align-items-center mb-3">
                     <div class="property-amenity d-flex align-items-center">
                       <i class="fa-solid fa-wifi"></i>
                       <h5 class="ms-2 mb-0 thin-font">WIFI</h5>
@@ -158,6 +158,31 @@
                       <h5 class="ms-2 mb-0 thin-font">Fire pit</h5>
                     </div>
                   </div>
+                </div>
+                <div class="row mt-3 border-bottom">
+                  <h4>Comments</h4>
+                  <div class="profile-comment mb-3">
+                    <div class="d-flex justify-content-between">
+                      <h6>Terrific home! Creepy host</h6> 
+                      <p><i class="bi bi-star-fill"> 3.5</i></p>
+                    </div>
+                    
+                    <p >Our stay was amazing but we couldn't help but think the host might've been watching us sleep...</p>
+                    <p class="comment-date">July 15, 2022</p>
+                  </div>
+
+                </div>
+                <div class="row mt-3 ">
+                  <div class="d-flex align-items-center mb-2">
+                    <h4 class="mb-0">
+                      Hosted by Edward
+                    </h4>
+                    <p class="mb-0 ms-4 mt-0"><i class="bi bi-star-fill"> 2.2</i></p>
+                  </div>
+                  
+                  <p class="mb-1">Resonse rate: 97%</p>
+                  <p>Response time: 1-2 business days</p>
+                  <a href="mailto:edward.cullen@gmail.com" class="btn btn-primary contact-button ms-2">Contact host</a>
                 </div>
               </div>
             </div>
