--- a/P1/property.html
+++ b/P1/property.html
@@ -65,17 +65,18 @@
             <div class="col-8 p-0">
               <div class="container border-bottom pb-2 pe-2">
                 <div class="row border-bottom">
-                  <div class="col-10">
-                    <h3 class="margin-auto">
-                      Entire house hosted by Edward
-                    </h3>
-                    <p class="margin-auto">
-                      10 guests • 5 bedrooms • 6 bathrooms
-                    </p>
+                  <div class="col d-flex ">
+                    <div class="d-flex flex-column">
+                      <h3 class="">
+                        Entire house hosted by Edward
+                      </h3>
+                      <p class=" mb-0">
+                        10 guests • 5 bedrooms • 6 bathrooms
+                      </p>
+                    </div>
+                    <img src="images/edwards.png" id="host" class="img-fluid ms-auto" alt="Avatar"> 
                   </div>
-                  <div class="col">
-                    <img src="images/edwards.png" id="host" class="img-fluid" alt="Avatar"> 
-                  </div>
+                
                 </div>
                 <div class="row mt-3 border-bottom">
                   <div class="col">
