--- a/P1/property.html
+++ b/P1/property.html
@@ -162,14 +162,21 @@
                 </div>
                 <div class="row mt-3 border-bottom">
                   <h4>Comments</h4>
-                  <div class="profile-comment mb-3">
-                    <div class="d-flex justify-content-between">
-                      <h6>Terrific home! Creepy host</h6> 
-                      <p><i class="bi bi-star-fill"> 3.5</i></p>
+                  <div class="profile-comment mb-3 p-0">
+                    <div class="border-bottom p-3">
+                      <div class="d-flex justify-content-between">
+                        <h6>Terrific home! Creepy host</h6> 
+                        <p><i class="bi bi-star-fill"> 3.5</i></p>
+                      </div>
+                      <p >Our stay was amazing but we couldn't help but think the host might've been watching us sleep...</p>
+                      <p class="comment-date">July 15, 2022</p>
                     </div>
-                    
-                    <p >Our stay was amazing but we couldn't help but think the host might've been watching us sleep...</p>
-                    <p class="comment-date">July 15, 2022</p>
+                    <div class="host-response m-0 p-3">
+                      <h6>
+                        Edward's response:
+                      </h6>
+                      <p>I like watching you sleep</p>
+                    </div>
                   </div>
 
                 </div>
