--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -26,7 +26,7 @@
             <img src="images/home.png" class="card-img-top sign-up-image">
             <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
-              <form action="logged-in.html">
+              <form action="signed-up.html">
                 <div class="mb-3">
                     <label class="form-label">First name</label>
                     <input class="form-control" type="text" required/>
