--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -43,7 +43,7 @@
               </div>
           </nav>
       </header>
-      <main>
+      <main class="no-reservations-main">
         <h1 class="m-5">
             Reservations
         </h1>
@@ -59,6 +59,19 @@
                     <img src="images/trip.jpg" id="no-reservation-img" alt="car going on road trip">
                 </div>
             </div>
+        </div>
+        <h3 class="ms-5 mb-3">
+          Past reservations
+        </h3>
+        <div class="card m-5">
+          <img class="card-img-top" src="images/bellas-house.jpeg" alt="Bella's house">
+          <div class="card-body">
+            <span class="badge text-bg-success">Completed</span>
+              <h5 class="card-title">Forks, Washington, US</h5>
+              <p class="card-text">4347 km away</p>
+              <p class="card-text">Feb. 10-18</p>
+              <p class="card-text font-weight-bold">$200 CAD/night</p>
+          </div>
         </div>
       </main>
   </body>
