--- a/P1/reservations.html
+++ b/P1/reservations.html
@@ -58,6 +58,18 @@
                 <a href="reservation-details.html" class="btn btn-primary mt-1">View reservation</a>
             </div>
           </div>
+          <h3 class="ms-5 mb-3">
+            Past reservations
+          </h3>
+          <div class="card m-5">
+            <img class="card-img-top" src="images/bellas-house.jpeg" alt="Bella's house">
+            <div class="card-body">
+              <span class="badge text-bg-success">Completed</span>
+                <h5 class="card-title">Forks, Washington, US</h5>
+                <p class="card-text">4347 km away</p>
+                <p class="card-text">Dec. 15-18 2022</p>
+            </div>
+          </div>
       </main>
   </body>
 </html>
