--- a/P1/canceled-reservation.html
+++ b/P1/canceled-reservation.html
@@ -23,7 +23,7 @@
                   <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
                   <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
                   <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0">
-                  <div><a href="search.html" class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></a></div>
+                  <div><a href="logged-in.html" class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></a></div>
                 </div>
                 <div class="d-flex align-items-center">
                     <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
