--- a/P1/editable-profile.html
+++ b/P1/editable-profile.html
@@ -10,7 +10,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="profile-body">
     <header> 
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="d-flex justify-content-between w-100 align-items-center">
@@ -19,7 +19,18 @@
               <a class="navbar-brand" href="logged-in.html">Restify</a>
             </div>
             <div class="d-flex align-items-center">
-              <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
+              <div class="dropdown">
+                <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                  <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
+                </a>
+              <ul class="dropdown-menu dropdown-menu-end me-1">
+                <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a></span></li>
+              </ul>
+            </div> 
               <div class="dropdown">
                 <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                   <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
@@ -63,12 +74,6 @@
                 <label class="form-label">Phone Number</label>
                 <input type="number" class="form-control" value=16477434232>
               </div>
-              </div>
-              <div class="mb-3 row">
-                <div class="col">
-                <label class="form-label">About</label>
-                <textarea class="form-control" rows="3">I'm the world's most dangerous predator. Everything about me invites you in.</textarea>
-                </div>
               </div>
               <div class="mb-3 row">
                 <div class="col">
