--- a/P1/host-booking-terminated.html
+++ b/P1/host-booking-terminated.html
@@ -21,7 +21,18 @@
                 <a class="navbar-brand" href="index.html">Restify</a>
               </div>
               <div class="d-flex align-items-center">
-                <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
+                <div class="dropdown">
+                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                    <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
+                  </a>
+                <ul class="dropdown-menu dropdown-menu-end me-1">
+                  <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a></span></li>
+                </ul>
+              </div> 
                 <div class="dropdown">
                   <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                     <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
