--- a/P1/fake-user-commented.html
+++ b/P1/fake-user-commented.html
@@ -66,15 +66,17 @@
               </div>
             </div>
             <div class="profile-reviews">
-              <p><i class="bi bi-star-half"> 0 Ratings</i></p>
+              <p><i class="bi bi-star-fill"> 2 Ratings</i></p>
               <h4>Reviews</h4>
               <div class="profile-comment">
                 <a href="#"><h6>Spongebob Squarepants (DNE)</h6></a>
+                <p><i class="bi bi-star-fill"> 5.0</i></p>
                 <p>Bob was a terrific guest, he even taught me how to paint!</p>
                 <p class="comment-date">July 9, 2021</p>
               </div>
               <div class="profile-comment">
                 <a href="#"><h6>Edward Cullen</h6></a>
+                <p><i class="bi bi-star-fill"> 5.0</i></p>
                 <p>Bob was a terrific guest, he even taught me how to paint!</p>
                 <p class="comment-date">February 4, 2023</p>
               </div>
