--- a/P1/fake-user.html
+++ b/P1/fake-user.html
@@ -66,9 +66,10 @@
               </div>
             </div>
             <div class="profile-reviews">
-              <p><i class="bi bi-star-half"> 0 Ratings</i></p>
+              <p><i class="bi bi-star-fill"> 1 Ratings</i></p>
               <h4>Reviews</h4>
               <div class="profile-comment">
+                <p><i class="bi bi-star-fill"> 5.0</i></p>
                 <a href="#"><h6>Spongebob Squarepants (DNE)</h6></a>
                 <p>Bob was a terrific guest, he even taught me how to paint!</p>
                 <p class="comment-date">July 9, 2021</p>
@@ -76,6 +77,7 @@
               <div class="profile-comment-edit">
                 <a href="profile.html"><h6>Edward Cullen</h6></a>
                 <form>
+                  <p><i class="bi bi-star-fill"> 5.0</i></p>
                     <textarea id="content">Bob was a terrific guest, he even taught me how to paint!</textarea>
                     <div class="row">
                         <a type="button" href="fake-user-commented.html" class="btn btn-primary">Post</a>
