--- a/P1/profile.html
+++ b/P1/profile.html
@@ -67,8 +67,20 @@
               <a href="editable-profile.html" type="button" class="btn btn-outline-secondary">Edit Profile</a>
             </div>
             <div class="profile-reviews">
-              <p><i class="bi bi-star-half"> 5 Ratings</i></p>
+              <p><i class="bi bi-star-half"> 2 Ratings</i></p>
               <h4>Reviews</h4>
+              <div class="profile-comment">
+                <a href="#"><h6>Guy 5</h6></a>
+                <p><i class="bi bi-star-half"> 3.0</i></p>
+                <p>Kind of a creepy dude lol</p>
+                <p class="comment-date">July 22, 2022</p>
+              </div>
+              <div class="profile-comment">
+                <a href="#"><h6>Guy 6</h6></a>
+                <p><i class="bi bi-star-half"> 3.5</i></p>
+                <p>Nice guy but his vibe is kind of weird. Told me my blood smells good??</p>
+                <p class="comment-date">July 22, 2022</p>
+              </div>
             </div>
           </div>
       </main>
