fixing some stuff

--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -111,6 +111,18 @@
                         <input type="checkbox" class="form-check-input" id="hottub" value="6">
                         <label for="hottub">Hottub</label>
                       </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="washer" value="2">
+                        <label for="washer">Washer</label>
+                      </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="dryer" value="0">
+                        <label for="dryer">Dryer</label>
+                      </div>
+                      <div class="form-group col-md-6 form-small-grid-item">
+                        <input type="checkbox" class="form-check-input" id="fireplace" value="6">
+                        <label for="fireplace">Fireplace</label>
+                      </div>
                     </div>
                     <button type="submit" class="btn btn-primary submit-btn">Update</button>
                   </form>
