--- a/P1/host-booking-terminated.html
+++ b/P1/host-booking-terminated.html
@@ -17,8 +17,8 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="d-flex justify-content-between w-100 align-items-center">
               <div class="d-flex align-items-center">
-                <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
-                <a class="navbar-brand" href="index.html">Restify</a>
+                <a class="nav-link active" href="logged-in" ><img id="home" src="images/home.png" alt="Logo"></a>
+                <a class="navbar-brand" href="logged-in">Restify</a>
               </div>
               <div class="d-flex align-items-center">
                 <div class="dropdown">
@@ -38,7 +38,9 @@
                     <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                   </a>
                 <ul class="dropdown-menu dropdown-menu-end me-1">
-                  <li><a class="dropdown-item" href="manage-properties.html">Reservations</a></li>
+                  <li><a class="dropdown-item" href="manage-properties.html">My Properties</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="no-reservations.html">My Reservations</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="profile.html">My Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
