--- a/P1/reservation-details.html
+++ b/P1/reservation-details.html
@@ -16,8 +16,8 @@
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="d-flex justify-content-between w-100 align-items-center">
                 <div class="d-flex align-items-center">
-                  <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
-                  <a class="navbar-brand" href="index.html">Restify</a>
+                  <a class="nav-link active" href="logged-in.html" ><img id="home" src="images/home.png" alt="Logo"></a>
+                  <a class="navbar-brand" href="logged-in.html">Restify</a>
                 </div>
                 <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
                   <input type="text" placeholder="Location" class="form-control shadow-none border-0">
@@ -33,11 +33,13 @@
                     <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end me-1">
-                    <li><a class="dropdown-item" href="no-reservations.html">Reservations</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="profile.html">My Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="signed-out.html">Log Out</a></li>
+                    <li><a class="dropdown-item" href="manage-properties.html">My Properties</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="no-reservations.html">My Reservations</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="profile.html">My Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="signed-out.html">Log Out</a></li>
                   </ul>
                 </div> 
                 </div>
